fix-hero view change to space around and align center content

--- a/src/pages/landing/styles/hero-view.css
+++ b/src/pages/landing/styles/hero-view.css
@@ -129,6 +129,9 @@
     align-items: flex-start;
     flex-direction: row;
     text-align: start;
+    align-items: flex-start;
+    justify-content: space-around;
+    /* text-align: center; */
   }
   .hero__text {
     align-items: flex-start;
